update the folder containing input models